# django-wiki-fts

./: .gitignore  .pre-commit-config.yaml  noxfile.py  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml
src/wiki_fts/: apps.py  config.py  models.py  signals.py  sites.py  views.py
src/wiki_fts/management/commands/: wiki_rebuild_index.py
src/wiki_fts/migrations/: 0001_initial.py  0002_postgres_gin_index.py  0003_sqlite_fts5_virtual_table.py
src/wiki_fts/providers/: __init__.py  base.py  basic.py  postgres.py  sqlite.py
tests/: conftest.py  settings.py  test_config.py  test_management_command.py  test_setup.py  test_signals.py  test_views.py
